--- a/clicky-game/public/manifest.json
+++ b/clicky-game/public/manifest.json
@@ -1,9 +1,9 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Scooby-Doo Clicky-Game",
+  "name": "A simple Scooby-Doo Clicky-Game",
   "icons": [
     {
-      "src": "favicon.ico",
+      "src": "bonefavicon.ico",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
     }
